--- a/src/public/index.html
+++ b/src/public/index.html
@@ -27,6 +27,8 @@
             margin-bottom: 2rem;
             border-bottom: 2px solid var(--muted-border-color);
             overflow-x: auto;
+                            align-items: center;
+                padding: 0.5rem 0;
         }
 
         .nav-tab {
@@ -34,6 +36,10 @@
             cursor: pointer;
             border: none;
             background: none;
+                            width: auto !important;
+                margin: 0 !important;
+                display: inline-block !important;
+                font-size: 1rem !important;
             color: var(--color);
             white-space: nowrap;
             border-bottom: 2px solid transparent;
