--- a/src/public/index.html
+++ b/src/public/index.html
@@ -32,9 +32,12 @@
         }
 
         .nav-tab {
-            padding: 0.75rem 1rem;
+                padding: 0.75rem 1rem !important;
             cursor: pointer;
             border: none;
+                            height: auto !important;
+                line-height: normal !important;
+                box-shadow: none !important;
             background: none;
                             width: auto !important;
                 margin: 0 !important;
