--- a/src/public/index.html
+++ b/src/public/index.html
@@ -33,25 +33,25 @@
 
         .nav-tab {
                 padding: 0.75rem 1rem !important;
-            cursor: pointer;
-            border: none;
+            cursor: pointer !important;
+            border: none !important;
                             height: auto !important;
                 line-height: normal !important;
                 box-shadow: none !important;
-            background: none;
+            background: none !important;
                             width: auto !important;
                 margin: 0 !important;
                 display: inline-block !important;
                 font-size: 1rem !important;
-            color: var(--color);
-            white-space: nowrap;
+            color: #333 !important;
+            white-space: nowrap !important;
             border-bottom: 2px solid transparent;
             margin-bottom: -2px;
         }
 
         .nav-tab.active {
-            border-bottom-color: var(--primary);
-            color: var(--primary);
+            border-bottom-color: var(--primary) !important;
+            color: var(--primary) !important;
         }
 
         .tab-content {
