fix: change nav to div for tab container to avoid PicoCSS nav styles

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -262,13 +262,13 @@
                 <button class="logout-btn" onclick="logout()">Logout</button>
             </header>
 
-            <nav class="nav-tabs">
+            <div class="nav-tabs">
                 <button class="nav-tab active" data-tab="status">Status</button>
                 <button class="nav-tab" data-tab="questions">Questions</button>
                 <button class="nav-tab" data-tab="schedule">Schedule</button>
                 <button class="nav-tab" data-tab="templates">Templates</button>
                 <button class="nav-tab" data-tab="history">History</button>
-            </nav>
+            </div><!-- nav-tabs -->
 
             <div id="status-tab" class="tab-content active">
                 <h2>App Status</h2>
