--- a/src/public/index.html
+++ b/src/public/index.html
@@ -32,6 +32,7 @@
         }
 
         .nav-tab {
+                            all: unset !important;
                 padding: 0.75rem 1rem !important;
             cursor: pointer !important;
             border: none !important;
