fix: add inline styles to nav-tab buttons to override PicoCSS

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -264,11 +264,11 @@
             </header>
 
             <div class="nav-tabs">
-                <button class="nav-tab active" data-tab="status">Status</button>
-                <button class="nav-tab" data-tab="questions">Questions</button>
-                <button class="nav-tab" data-tab="schedule">Schedule</button>
-                <button class="nav-tab" data-tab="templates">Templates</button>
-                <button class="nav-tab" data-tab="history">History</button>
+                <button style="all:unset;display:inline-block;padding:10px 15px;color:#333;font-size:1rem;cursor:pointer;white-space:nowrap;border-bottom:2px solid transparent;margin-bottom:-2px" class="nav-tab active" data-tab="status">Status</button>
+                <button style="all:unset;display:inline-block;padding:10px 15px;color:#333;font-size:1rem;cursor:pointer;white-space:nowrap;border-bottom:2px solid transparent;margin-bottom:-2px" class="nav-tab" data-tab="questions">Questions</button>
+                <button style="all:unset;display:inline-block;padding:10px 15px;color:#333;font-size:1rem;cursor:pointer;white-space:nowrap;border-bottom:2px solid transparent;margin-bottom:-2px" class="nav-tab" data-tab="schedule">Schedule</button>
+                <button style="all:unset;display:inline-block;padding:10px 15px;color:#333;font-size:1rem;cursor:pointer;white-space:nowrap;border-bottom:2px solid transparent;margin-bottom:-2px" class="nav-tab" data-tab="templates">Templates</button>
+                <button style="all:unset;display:inline-block;padding:10px 15px;color:#333;font-size:1rem;cursor:pointer;white-space:nowrap;border-bottom:2px solid transparent;margin-bottom:-2px" class="nav-tab" data-tab="history">History</button>
             </div><!-- nav-tabs -->
 
             <div id="status-tab" class="tab-content active">
