--- a/src/public/index.html
+++ b/src/public/index.html
@@ -36,6 +36,13 @@
                 padding: 0.75rem 1rem !important;
             cursor: pointer !important;
             border: none !important;
+                            --background-color: transparent !important;
+                --color: #333 !important;
+                --border-color: transparent !important;
+                --box-shadow: none !important;
+                --pico-background-color: transparent !important;
+                --pico-color: #333 !important;
+                --pico-border-color: transparent !important;
                             height: auto !important;
                 line-height: normal !important;
                 box-shadow: none !important;
