fix: re-enable PicoCSS and change nav-tab buttons to span elements

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Good Morning Love - Dashboard</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💕</text></svg>">
-    <link rel="stylesheet" href="DISABLED_https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <style>
         :root {
             --primary: #d63384;
@@ -271,11 +271,11 @@
             </header>
 
             <div class="nav-tabs">
-                <button class="nav-tab active" data-tab="status">Status</button>
-                <button class="nav-tab" data-tab="questions">Questions</button>
-                <button class="nav-tab" data-tab="schedule">Schedule</button>
-                <button class="nav-tab" data-tab="templates">Templates</button>
-                <button class="nav-tab" data-tab="history">History</button>
+                <span class="nav-tab active" data-tab="status">Status</span>
+                <span class="nav-tab" data-tab="questions">Questions</span>
+                <span class="nav-tab" data-tab="schedule">Schedule</span>
+                <span class="nav-tab" data-tab="templates">Templates</span>
+                <span class="nav-tab" data-tab="history">History</span>
             </div><!-- nav-tabs -->
 
             <div id="status-tab" class="tab-content active">
