--- a/src/public/index.html
+++ b/src/public/index.html
@@ -92,11 +92,11 @@
             <button class="logout-btn" onclick="logout()">Logout</button>
         </header>
         <div class="nav-tabs">
-            <a href="javascript:void(0)" class="nav-tab active" onclick="switchTab(event, 'status')" style="color:#555;text-decoration:none;padding:0.75rem 1.25rem;border-bottom:3px solid #d63384;margin-bottom:-2px;">Status</a>
-            <a href="javascript:void(0)" class="nav-tab" onclick="switchTab(event, 'questions')" style="color:#555;text-decoration:none;padding:0.75rem 1.25rem;border-bottom:3px solid transparent;margin-bottom:-2px;">Questions</a>
-            <a href="javascript:void(0)" class="nav-tab" onclick="switchTab(event, 'schedule')" style="color:#555;text-decoration:none;padding:0.75rem 1.25rem;border-bottom:3px solid transparent;margin-bottom:-2px;">Schedule</a>
-            <a href="javascript:void(0)" class="nav-tab" onclick="switchTab(event, 'templates')" style="color:#555;text-decoration:none;padding:0.75rem 1.25rem;border-bottom:3px solid transparent;margin-bottom:-2px;">Templates</a>
-            <a href="javascript:void(0)" class="nav-tab" onclick="switchTab(event, 'history')" style="color:#555;text-decoration:none;padding:0.75rem 1.25rem;border-bottom:3px solid transparent;margin-bottom:-2px;">History</a>
+            <span class="nav-tab active" onclick="switchTab(event, 'status')" style="color:#555;text-decoration:none;padding:0.75rem 1.25rem;border-bottom:3px solid #d63384;margin-bottom:-2px;">Status</span>
+            <span class="nav-tab" onclick="switchTab(event, 'questions')" style="color:#555;text-decoration:none;padding:0.75rem 1.25rem;border-bottom:3px solid transparent;margin-bottom:-2px;">Questions</span>
+            <span class="nav-tab" onclick="switchTab(event, 'schedule')" style="color:#555;text-decoration:none;padding:0.75rem 1.25rem;border-bottom:3px solid transparent;margin-bottom:-2px;">Schedule</span>
+            <span class="nav-tab" onclick="switchTab(event, 'templates')" style="color:#555;text-decoration:none;padding:0.75rem 1.25rem;border-bottom:3px solid transparent;margin-bottom:-2px;">Templates</span>
+            <span class="nav-tab" onclick="switchTab(event, 'history')" style="color:#555;text-decoration:none;padding:0.75rem 1.25rem;border-bottom:3px solid transparent;margin-bottom:-2px;">History</span>
         </div>
         <div id="tab-status" class="tab-content active">
             <h2>App Status</h2>
