--- a/src/public/index.html
+++ b/src/public/index.html
@@ -91,7 +91,8 @@
             <h1>Good Morning Love Dashboard 💕</h1>
             <button class="logout-btn" onclick="logout()">Logout</button>
         </header>
-        <div class="nav-tabs">
+        <style>.nav-tabs,.nav-tabs *{all:unset!important}.nav-tabs{display:flex!important;gap:0!important;margin-bottom:2rem!important;border-bottom:2px solid #ccc!important;padding:0!important}.nav-tabs .nav-tab{display:inline-block!important;padding:12px 20px!important;cursor:pointer!important;color:#555!important;font-size:16px!important;font-weight:500!important;font-family:system-ui,sans-serif!important;border-bottom:3px solid transparent!important;margin-bottom:-2px!important}.nav-tabs .nav-tab:hover{color:#d63384!important}.nav-tabs .nav-tab.active{color:#d63384!important;font-weight:600!important;border-bottom-color:#d63384!important}</style>
+<div class="nav-tabs">
             <span class="nav-tab active" onclick="switchTab(event, 'status')" style="color:#555;text-decoration:none;padding:0.75rem 1.25rem;border-bottom:3px solid #d63384;margin-bottom:-2px;">Status</span>
             <span class="nav-tab" onclick="switchTab(event, 'questions')" style="color:#555;text-decoration:none;padding:0.75rem 1.25rem;border-bottom:3px solid transparent;margin-bottom:-2px;">Questions</span>
             <span class="nav-tab" onclick="switchTab(event, 'schedule')" style="color:#555;text-decoration:none;padding:0.75rem 1.25rem;border-bottom:3px solid transparent;margin-bottom:-2px;">Schedule</span>
