fix: Questions display as objects - use q.text for rendering, proper object format

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -228,9 +228,9 @@
         }
         function renderQuestions() {
             var list = document.getElementById('questions-list');
-            list.innerHTML = questions.map(function(q, i) { return '<div class="question-item"><span class="question-number">' + (i+1) + '.</span><input type="text" class="question-text" value="' + q + '" onchange="questions[' + i + '] = this.value"><div class="question-actions"><button onclick="removeQuestion(' + i + ')" class="btn-sm secondary outline">Remove</button></div></div>'; }).join('');
+            list.innerHTML = questions.map(function(q, i) { return '<div class="question-item"><span class="question-number">' + (i+1) + '.</span><input type="text" class="question-text" value="' + (q.text || q) + '" onchange="questions[' + i + '] = {number: ' + (i+1) + ', text: this.value}"><div class="question-actions"><button onclick="removeQuestion(' + i + ')" class="btn-sm secondary outline">Remove</button></div></div>'; }).join('');
         }
-        function addQuestion() { questions.push('New question?'); renderQuestions(); }
+        function addQuestion() { questions.push({number: questions.length + 1, text: 'New question?'}); renderQuestions(); }
         function removeQuestion(index) { questions.splice(index, 1); renderQuestions(); }
         async function saveQuestions() {
             try { var res = await apiCall('/api/dashboard/questions', { method: 'PUT', body: { questions: questions } }); var data = await res.json(); if (data.success) showToast('Questions saved!', 'success'); else showToast('Failed', 'error'); }
